# kokkos-kernels

./: CMakeLists.txt
perf_test/sparse/: KokkosSparse_spmv.cpp
perf_test/sparse/spmv/: Makefile
src/: CMakeLists.txt
src/batched/: KokkosBatched_InnerGemmFixC_Serial_Impl.hpp
src/blas/: KokkosBlas1_iamax.hpp
src/blas/impl/: KokkosBlas1_iamax_impl.hpp  KokkosBlas1_iamax_spec.hpp
src/common/: KokkosKernels_ExecSpaceUtils.hpp
src/impl/generated_specializations_cpp/axpby/: KokkosBlas1_axpby_eti_spec_inst.cpp.in  KokkosBlas1_axpby_mv_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/dot/: KokkosBlas1_dot_eti_spec_inst.cpp.in  KokkosBlas1_dot_mv_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/gemm/: KokkosBlas3_gemm_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/gemv/: KokkosBlas2_gemv_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/gesv/: KokkosBlas_gesv_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/iamax/: KokkosBlas1_iamax_eti_spec_inst.cpp.in  KokkosBlas1_iamax_mv_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/mult/: KokkosBlas1_mult_eti_spec_inst.cpp.in  KokkosBlas1_mult_mv_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/nrm1/: KokkosBlas1_nrm1_eti_spec_inst.cpp.in  KokkosBlas1_nrm1_mv_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/nrm2/: KokkosBlas1_nrm2_eti_spec_inst.cpp.in  KokkosBlas1_nrm2_mv_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/nrm2w/: KokkosBlas1_nrm2w_eti_spec_inst.cpp.in  KokkosBlas1_nrm2w_mv_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/nrminf/: KokkosBlas1_nrminf_eti_spec_inst.cpp.in  KokkosBlas1_nrminf_mv_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/reciprocal/: KokkosBlas1_reciprocal_eti_spec_inst.cpp.in  KokkosBlas1_reciprocal_mv_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/scal/: KokkosBlas1_scal_eti_spec_inst.cpp.in  KokkosBlas1_scal_mv_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/sum/: KokkosBlas1_sum_eti_spec_inst.cpp.in  KokkosBlas1_sum_mv_eti_spec_inst.cpp.in
src/impl/generated_specializations_cpp/update/: KokkosBlas1_update_eti_spec_inst.cpp.in  KokkosBlas1_update_mv_eti_spec_inst.cpp.in
src/sparse/: KokkosSparse_gauss_seidel_handle.hpp
src/sparse/impl/: KokkosSparse_cluster_gauss_seidel_impl.hpp  KokkosSparse_gauss_seidel_impl.hpp  KokkosSparse_spmv_impl.hpp
